# quadro-core

./: .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  README.md  create_archive.sh
sources/: CMakeLists.txt  checkgit.cmake  clang-format.cmake  cppcheck.cmake  libraries.cmake  packages-recipe.cmake  quadro-core.kdev4  translation.cmake  version.h.in
sources/.kdev4/: quadro-core.kdev4  sources.kdev4
sources/ideas/desktopparser/: desktopparser.cpp  desktopparser.h
sources/quadro/: CMakeLists.txt  docs.cmake  quadro.desktop
sources/quadro-core/: CMakeLists.txt  doxygen.conf.in
sources/quadro-core/include/quadro/: applicationitem.h  applicationlauncheritem.h  favoritescore.h  filemanagercore.h  launchercore.h  pluginadaptor.h  plugincore.h  pluginitem.h  quadro.h  quadroadaptor.h  tabpluginitem.h  x11adaptor.h
sources/quadro-core/src/: CMakeLists.txt  applicationitem.cpp  applicationlauncheritem.cpp  favoritescore.cpp  filemanagercore.cpp  launhercore.cpp  main.cpp  pluginadaptor.cpp  plugincore.cpp  pluginitem.cpp  quadroadaptor.cpp  quadrocore.cpp  tabpluginitem.cpp  x11adaptor.cpp
sources/quadro-plugins/desktopengine/: desktopengine.cpp  desktopengine.h
sources/quadro-ui/: CMakeLists.txt  quadro-ui.desktop
sources/quadro-ui/src/: CMakeLists.txt  appiconwidget.cpp  appiconwidget.h  applauncherwidget.cpp  applauncherwidget.h  applauncherwidget.ui  dbusoperation.cpp  dbusoperation.h  editappwindow.cpp  editappwindow.h  fileiconwidget.cpp  fileiconwidget.h  iconwidget.cpp  iconwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messages.cpp  messages.h  quadrouiadaptor.cpp  quadrouiadaptor.h  quadrowidget.cpp  quadrowidget.h  settingswindow.cpp  settingswindow.h  standaloneappwidget.cpp  standaloneappwidget.h
sources/quadro/include/quadro/: abstractappaggregator.h  applicationitem.h  applicationlauncheritem.h  config.h  favoritescore.h  filemanagercore.h  launchercore.h  pluginadaptor.h  plugincore.h  pluginitem.h  quadro.h  quadroadaptor.h  quadrocore.h  quadrodebug.h  recentlycore.h  tabpluginadaptor.h  tabpluginitem.h  x11adaptor.h
sources/quadro/src/: CMakeLists.txt  QuadroMainWindow.cpp  QuadroMainWindow.h  QuadroUiAdaptor.cpp  QuadroUiAdaptor.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  abstractappaggregator.cpp  applicationitem.cpp  applicationlauncheritem.cpp  favoritescore.cpp  filemanagercore.cpp  launhercore.cpp  main.cpp  mainwindow.cpp  mainwindow.h  messages.cpp  messages.h  pluginadaptor.cpp  plugincore.cpp  pluginitem.cpp  quadroadaptor.cpp  quadrocore.cpp  quadrodebug.cpp  quadromainwindow.cpp  quadromainwindow.h  quadromainwindow.ui  quadrouiadaptor.cpp  quadrouiadaptor.h  recentlycore.cpp  settingswindow.cpp  settingswindow.h  settingswindow.ui  tabpluginadaptor.cpp  tabpluginitem.cpp  x11adaptor.cpp
sources/quadrocore/: CMakeLists.txt  Config.h.in  QuadroConfig.cmake  QuadroLibraries.cmake  QuadroMacros.cmake  QuadroPaths.cmake.in  adds.cmake  config.h.in  docs.cmake  doxygen.conf.in
sources/quadrocore/include/quadro/: abstractappaggregator.h  config.h  launchercore.h  pluginadaptor.h  plugininterface.h  quadro.h  quadrodebug.h  tabpluginadaptor.h  tabplugininterface.h
sources/quadrocore/include/quadrocore/: AbstractAppAggregator.h  ApplicationItem.h  ConfigManager.h  ConfigManagerAdaptor.h  DBusOperations.h  DesktopInterface.h  DocumentsCore.h  FavoritesCore.h  FileInfoExtension.h  FileManagerCore.h  LauncherCore.h  PluginAdaptor.h  PluginCore.h  PluginInterface.h  PluginRepresentation.h  Quadro.h  QuadroAdaptor.h  QuadroCore.h  QuadroDebug.h  QuadroPluginInterface.h  QuadroPluginadaptor.h  RecentlyCore.h  StandaloneApplicationItem.h  TabPluginAdaptor.h  TabPluginInterface.h  abstractappaggregator.h  applicationitem.h  applicationlauncheritem.h  configmanager.h  configmanageradaptor.h  dbusoperations.h  desktopinterface.h  documentscore.h  favoritescore.h  fileinfoextension.h  filemanagercore.h  launchercore.h  pluginadaptor.h  plugincore.h  plugininterface.h  (+12 more)
sources/quadrocore/src/: AbstractAppAggregator.cpp  ApplicationItem.cpp  CMakeLists.txt  ConfigManager.cpp  ConfigManagerAdaptor.cpp  DBusOperations.cpp  DocumentsCore.cpp  FavoritesCore.cpp  FileInfoExtension.cpp  FileManagerCore.cpp  PluginAdaptor.cpp  PluginCore.cpp  PluginRepresentation.cpp  QuadroAdaptor.cpp  QuadroCore.cpp  QuadroDebug.cpp  QuadroPluginadaptor.cpp  RecentlyCore.cpp  StandaloneApplicationItem.cpp  TabPluginAdaptor.cpp  abstractappaggregator.cpp  applicationitem.cpp  applicationlauncheritem.cpp  configmanager.cpp  configmanageradaptor.cpp  dbusoperations.cpp  documentscore.cpp  favoritescore.cpp  fileinfoextension.cpp  filemanagercore.cpp  launhercore.cpp  main.cpp  pluginadaptor.cpp  plugincore.cpp  pluginrepresentation.cpp  quadroadaptor.cpp  quadrocore.cpp  quadrodebug.cpp  quadropluginadaptor.cpp  recentlycore.cpp  (+3 more)
sources/quadrodesktopadaptors/: CMakeLists.txt
sources/quadrodesktopadaptors/quadroxcbadaptor/: CMakeLists.txt  QuadroXCBAdaptor.cpp  QuadroXCBAdaptor.h  libraries.cmake  quadroxcbadaptor.cpp  quadroxcbadaptor.h
sources/quadroui/: CMakeLists.txt  docs.cmake  doxygen.conf.in
sources/quadroui/src/: AppIconWidget.cpp  CMakeLists.txt  EditAppWindow.cpp  FileIconWidget.cpp  FileInfoWindow.cpp  IconWidget.cpp  PluginConfigWidget.cpp  PluginContainer.cpp  PluginRepresentationWidget.cpp  PluginRepresentationWidget.ui  PluginWidget.cpp  QuadroWidget.cpp  SearchBar.cpp  StandaloneAppWidget.cpp  WebAppWidget.cpp  WebAppWidget.ui  appiconwidget.cpp  editappwindow.cpp  editappwindow.ui  fileiconwidget.cpp  fileinfowindow.cpp  fileinfowindow.ui  iconwidget.cpp  pluginconfigwidget.cpp  pluginconfigwidget.ui  plugincontainer.cpp  pluginrepresentationwidget.cpp  pluginrepresentationwidget.ui  pluginwidget.cpp  quadrowidget.cpp  searchbar.cpp  standaloneappwidget.cpp  standaloneappwidget.ui  webappwidget.cpp  webappwidget.ui
sources/resources/: CMakeLists.txt  quadro.qrc
sources/resources/translations/: core-quadro_en.ts  core-quadro_ru.ts  en.ts  quadro.ts  ru.ts
sources/test/: CMakeLists.txt
(+28 files in other folders)
